# artrix

./: Cargo.toml
models/: bern-deepfry[0-2285].npz
models/bern/: [0-0].npz  [0-10].npz  [0-11].npz  [0-12].npz  [0-13].npz  [0-14].npz  [0-15].npz  [0-16].npz  [0-17].npz  [0-18].npz  [0-19].npz  [0-1].npz  [0-20].npz  [0-21].npz  [0-22].npz  [0-23].npz  [0-24].npz  [0-25].npz  [0-26].npz  [0-27].npz  [0-28].npz  [0-29].npz  [0-2].npz  [0-30].npz  [0-31].npz  [0-32].npz  [0-33].npz  [0-34].npz  [0-35].npz  [0-3].npz  [0-4].npz  [0-5].npz  [0-6].npz  [0-7].npz  [0-8].npz  [0-9].npz
src/: artrix.rs  main.rs  nnartrix.rs  tensor.rs
