[package]
name = "artrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.1"
clap = { version = "3.2.12", features = ["derive"] }
dfdx = "0.8.0"
fixed = "1.16.0"
image = "0.24.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
walkdir = "2.3.2"
